--- a/bibtextarxiv.html
+++ b/bibtextarxiv.html
@@ -1,6 +1,6 @@
-@inproceedings{Jingjing2017, 
-title={Transfer Learning for Low-Resource Chinese Word Segmentation with a Novel Neural Network}, 
-author={Jingjing, Xu and Shuming, Ma and Yi, Zhang and Bingzhen, Wei and Xiaoyan, Cai and Xu, Sun}, 
-booktitle={The Conference on Natural Language Processing and Chinese Computing}, 
-year={2017}
+@article{li2017hierarchical,
+  title={Hierarchical Gated Recurrent Neural Tensor Network for Answer Triggering},
+  author={Li, Wei and Wu, Yunfang},
+  journal={arXiv preprint arXiv:1709.05599},
+  year={2017}
 }
