--- a/bibtextarxiv.html
+++ b/bibtextarxiv.html
@@ -4,3 +4,10 @@
   journal={arXiv preprint arXiv:1709.05599},
   year={2017}
 }
+
+@article{li2017distributed,
+  title={Distributed Representation for Traditional Chinese Medicine Herb via Deep Learning Models},
+  author={Li, Wei and Yang, Zheng},
+  journal={arXiv preprint arXiv:1711.01701},
+  year={2017}
+}
