--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Jingjing Xu</title>
+<title>Wei Li</title>
 <style type="text/css">
 .name {
 	font-size: 28px;
@@ -42,16 +42,16 @@ size24 {
 }
 </style>
 </head>
-<body><h1>Jingjing Xu, Ph.D. Candidate</h1>
+<body><h1>Wei Li, Ph.D. Candidate</h1>
 <p>
-Email：jingjingxu (AT) pku.edu.cn
+Email：liweitj47 (AT) pku.edu.cn
 </p>
 
 
 
 <p>
-Jingjing Xu is a Ph.D. student, supervised
-by Prof. Xu Sun. Her recent research interests
+Wei Li is a Ph.D. student, supervised
+by Prof. Xu Sun. His recent research interests
 include deep learning applied to natural language processing. 
 </p>
 
