--- a/index.html
+++ b/index.html
@@ -62,38 +62,13 @@ include deep learning applied to natural language processing.
 
 
 <ul>
-<li><a href = "https://arxiv.org/abs/1702.04488">Transfer Deep Learning for Low-Resource Chinese Word Segmentation with a Novel Neural Network</a> <br>
-Jingjing Xu, Shuming Ma, Yi Zhang, Bingzhen Wei, Xiaoyan Cai, and Xu Sun<br>
-NLPCC 2017<br> 
-<div id="arxiv_2017b_2"></div> 
-[<a href = "https://github.com/jingjingxupku/Low-Resource-CWS-">code</a>][<a href="bibtextarxiv.html">bibtex</a>]
-<div id="arxiv_2017b_2"></div> 
+<li><a href = "http://www.aclweb.org/anthology/C/C16/C16-1185.pdf">Multi-level Gated Recurrent Neural Network for Dialog Act Classification</a> <br>
+Wei Li, Yunfang Wu<br>
+COLING 2016<br> 
+[<a href="bibtex.html">bibtex</a>]
+<div id="COLING_2016a_2"></div> 
 
 </ul>
-
-
-<ul>
-  <li>Improving Semantic Relevance for Sequence-to-Sequence Learning of Chinese Social Media Text Summarization<br>
-    
-    Shuming Ma, Xu Sun, Jingjing Xu, Houfeng Wang, Wenjie Li, Qi Su<br>
-    ACL 2017<br>
-<div id="ACL_2017" style="display:none">
-<blockquote>
-@inproceedings{MA2017,<br>
-title={Improving Semantic Relevance for Sequence-to-Sequence Learning of Chinese Social Media Text Summarization},<br>
-author={Shuming Ma, Xu Sun, Jingjing Xu, Houfeng Wang, Wenjie Li, Qi Su},<br>
- booktitle={Meeting of the Association for Computational Linguistics},<br>
-year={2017},<br>
-}
-</blockquote>
-</div>
-[<a href = "https://arxiv.org/abs/1706.02459">pdf</a>][<a href = "https://github.com/shumingma/SRB">code</a>][<a href="bibtext_ma.html">bibtex</a>]
-<div id="ACL_2017a"></div></li><br>
-</ul>
-
-
-
-
 
 <ul>
   <li><a href="http://aclweb.org/anthology/P16-2092">Dependency-based Gated Recursive Neural Network for Chinese Word
@@ -106,23 +81,6 @@ Segmentation</a><br>
 </li>
 </ul>
 
-
-
-<h2>Software</h2>
-<p class="crf-adf"><strong>A Resource-independent Word Segmentation Toolkit
-</strong></p>
-<blockquote>
-  <p>This toolkit is a word segmentation framework on top of c# that aims to provide an efficient way of implementing deep neural networks.</p>
-  <p>Main features:</p>
-  <ul>
-    <li>This tooklit is developed with C#. Traditional neural networks are usually developed with Python.
-We supply the version of C# to help developers build word segmentation systems.</li>
-    <li>    This toolkit achieves competitive results on MSR, PKU and CTB (8.0) datasets.</li>
-    <li>    To speed up training, we explore mini-batch asynchronous parallel learning on neural word segmentation.</li>
-  </ul>
-  <p><span class="crf-adf2">[<a href="tutorial.pdf">Tutorial</a>] [<a href="https://github.com/jingjingxupku/Low-Resource-CWS-">Download the source code</a>]</span></p>
-  <p>&nbsp;</p>
-</blockquote>
 
 <br />
 
