--- a/index.html
+++ b/index.html
@@ -59,27 +59,15 @@ include deep learning applied to natural language processing.
 <h2>Publications</h2>
 
 
-
-
 <ul>
 <li><a href = "http://www.aclweb.org/anthology/C/C16/C16-1185.pdf">Multi-level Gated Recurrent Neural Network for Dialog Act Classification</a> <br>
 Wei Li, Yunfang Wu<br>
 COLING 2016<br> 
 [<a href="bibtex.html">bibtex</a>]
-<div id="COLING_2016a_2"></div> 
+<div id="COLING_2016"></div> 
 
 </ul>
 
-<ul>
-  <li><a href="http://aclweb.org/anthology/P16-2092">Dependency-based Gated Recursive Neural Network for Chinese Word
-Segmentation</a><br>
-    Jingjing Xu, Xu Sun<br>
-    ACL 2016. Short paper. pages:567-572<br>
-[<a href="bibtex.html">bibtex</a>]
-<div id="ACL2016a_2"></div>
-
-</li>
-</ul>
 
 
 <br />
