--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Email：liweitj47 (AT) pku.edu.cn
 
 <p>
 Wei Li is a Ph.D. student, supervised
-by Prof. Xu Sun. His recent research interests
+	by <a href="http://xusun.org">Prof. Xu Sun</a>. His recent research interests
 include deep learning applied to natural language processing. 
 </p>
 
