--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ Wei Li is a Ph.D. student, supervised
 	by <a href="http://xusun.org">Prof. Xu Sun</a>. His recent research interests
 include deep learning applied to natural language processing. 
 </p>
+	
+<p style="font-size: 20px; margin-top: 30px;"><strong>Education:</strong></p>
+<ul>
+  <li style="line-height: 20px; margin-bottom: 10px;">Master-degree student in Computer Science, Peking Universiy, Sept. 2015 - Now.  Advisor: <a href="http://xusun.org">Yunfang Wu</a></li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Computer Science, Peking University, Sept. 2011 - Jul. 2015.</li>
+</ul>
+
 
 
 <h2>Publications</h2>
@@ -61,10 +68,28 @@ include deep learning applied to natural language processing.
 
 <ul>
 <li><a href = "http://www.aclweb.org/anthology/C/C16/C16-1185.pdf">Multi-level Gated Recurrent Neural Network for Dialog Act Classification</a> <br>
-Wei Li, Yunfang Wu<br>
-COLING 2016<br> 
-[<a href="bibtex.html">bibtex</a>]
-<div id="COLING_2016"></div> 
+	Wei Li, Yunfang Wu<br>
+	COLING 2016<br> 
+	[<a href="bibtex.html">bibtex</a>]
+	<div id="COLING_2016"></div> 
+	
+<li style="line-height: 20px; margin-bottom: 20px;">Automatic Academic Paper Rating Based on Modularized Hierarchical Convolution Neural Network
+	    <br>
+	  Pengcheng Yang, Xu Sun, <strong>Wei Li</strong>, Shuming Ma<br>
+	  To appear in <strong>ACL</strong> 2018</li>
+
+<li style="line-height: 20px; margin-bottom: 20px;">
+	  Query and Output: Generating Words by Querying Distributed Word Representations for Paraphrase Generation
+	    <br>
+	  Shuming Ma, Xu Sun,<strong> Wei Li</strong>, Sujian Li, Wenjie Li, Xuancheng Ren<br>
+	  To appear in <strong>NAACL</strong> 2018</li>
+
+<li>
+	SGM: Sequence Generation Model for Multi-label Classification. <br>
+	Pengcheng Yang, Xu Sun, <b>Wei Li</b>, Shuming Ma, Wei Wu, Houfeng Wang.<br>
+	<b>COLING</b> 2018<br>
+
+
 
 </ul>
 
