--- a/index.html
+++ b/index.html
@@ -42,10 +42,27 @@ size24 {
 }
 </style>
 </head>
-<body><h1>Wei Li, Ph.D. Candidate</h1>
-<p>
-Email：liweitj47 (AT) pku.edu.cn
-</p>
+<body><h1></h1>
+
+
+	
+<table cellspacing="0" cellpadding="0" border="0" width="1200">
+	<tr>
+	<td width="16%" height="100"><img src="IMG.jpg" width="160" /></td>
+
+	<td width="84%">
+	<body>
+	 <p style="font-size: 30px; font-family: Cambria, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', serif;"><strong>Wei Li (李炜) </strong></p>
+	 <p> Ph.D. Candidate</p>
+	<p><a href="http://lanco.pku.edu.cn/index.html">Language Computing and Machine Learning Group (LANCO)</a>, <br>
+	  <a href="http://klcl.pku.edu.cn/">Key Laboratory of Computational Linguistics</a>, <br>
+	  <a href="http://eecs.pku.edu.cn/">School of Electronics Engineering and Computer Science</a>,<br>
+	  <a href="http://pku.edu.cn">Peking University</a></p>
+	 <p>Email：liweitj47 (AT) pku.edu.cn</p>
+	</td>
+
+	</tr>
+</table>
 
 
 
