--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ size24 {
 	
 <table cellspacing="0" cellpadding="0" border="0" width="1200">
 	<tr>
-	<td width="16%" height="100"><img src="IMG.jpg" width="160" /></td>
+	<td width="16%" height="100"><img src="IMG_1043++.jpg" width="160" /></td>
 
 	<td width="84%">
 	<body>
