--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ include deep learning applied to natural language processing.
 	
 <p style="font-size: 20px; margin-top: 30px;"><strong>Education:</strong></p>
 <ul>
-  <li style="line-height: 20px; margin-bottom: 10px;">Master-degree student in Computer Science, Peking Universiy, Sept. 2015 - Now.  Advisor: <a href="http://xusun.org">Yunfang Wu</a></li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Master-degree student in Computer Science, Peking Universiy, Sept. 2015 - Now.  Advisor: Yunfang Wu</li>
   <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Computer Science, Peking University, Sept. 2011 - Jul. 2015.</li>
 </ul>
 
