--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@ include deep learning applied to natural language processing.
 	Pengcheng Yang, Xu Sun, <b>Wei Li</b>, Shuming Ma, Wei Wu, Houfeng Wang.<br>
 	<b>COLING</b> 2018<br>
 
+<li>	
+	A Unified Model for Document-based Question Answering Based on Human-like Reading
+Strategy
+	<br>
+	Weikang Li, <b>Wei Li</b>, Yunfang Wu<br>
+	<b>AAAI</b> 2018<br>
 
 
 </ul>
