--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@ include deep learning applied to natural language processing.
   <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Computer Science, Peking University, Sept. 2011 - Jul. 2015.</li>
 </ul>
 
-
+<p style="font-size: 20px; margin-top: 30px;"><strong>Internship:</strong></p>
+<ul>
+  <li style="line-height: 20px; margin-bottom: 10px;">Summer Intern at OMG, Tencent, July. 2016 - Aug. 2016.  Advisor: Bin Kang</li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Summer Intern at DaMo Academy, Alibaba, July. 2018 - Sept. 2018. Advisor: Hongxia Yang</li>
+</ul>
 
 <h2>Publications</h2>
 
