--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ size24 {
 	<body>
 	 <p style="font-size: 30px; font-family: Cambria, 'Hoefler Text', 'Liberation Serif', Times, 'Times New Roman', serif;"><strong>Wei Li (李炜) </strong></p>
 	 <p> Ph.D. Candidate</p>
-	<p><a href="http://lanco.pku.edu.cn/index.html">Language Computing and Machine Learning Group (LANCO)</a>, <br>
+	<p><a href="http://lanco.pku.edu.cn">Language Computing and Machine Learning Group (LANCO)</a>, <br>
 	  <a href="http://klcl.pku.edu.cn/">Key Laboratory of Computational Linguistics</a>, <br>
 	  <a href="http://eecs.pku.edu.cn/">School of Electronics Engineering and Computer Science</a>,<br>
 	  <a href="http://pku.edu.cn">Peking University</a></p>
