--- a/index.html
+++ b/index.html
@@ -88,22 +88,27 @@ include deep learning applied to natural language processing.
 
 
 <ul>
+<li><a href = "https://arxiv.org/abs/1906.01231">Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model</a> <br>
+	Wei Li, Jingjing Xu, Yancheng He, Shengli Yan, Yunfang Wu, Xu sun<br>
+	ACL 2019<br> 
+	[<a href="bibtex.html">bibtex</a>]
+	<div id="ACL 2019"></div> </li>
 <li><a href = "http://www.aclweb.org/anthology/C/C16/C16-1185.pdf">Multi-level Gated Recurrent Neural Network for Dialog Act Classification</a> <br>
 	Wei Li, Yunfang Wu<br>
 	COLING 2016<br> 
 	[<a href="bibtex.html">bibtex</a>]
-	<div id="COLING_2016"></div> 
+	<div id="COLING_2016"></div> </li>
 	
 <li style="line-height: 20px; margin-bottom: 20px;">Automatic Academic Paper Rating Based on Modularized Hierarchical Convolution Neural Network
 	    <br>
 	  Pengcheng Yang, Xu Sun, <strong>Wei Li</strong>, Shuming Ma<br>
-	  To appear in <strong>ACL</strong> 2018</li>
+	  Published in <strong>ACL</strong> 2018</li>
 
 <li style="line-height: 20px; margin-bottom: 20px;">
 	  Query and Output: Generating Words by Querying Distributed Word Representations for Paraphrase Generation
 	    <br>
 	  Shuming Ma, Xu Sun,<strong> Wei Li</strong>, Sujian Li, Wenjie Li, Xuancheng Ren<br>
-	  To appear in <strong>NAACL</strong> 2018</li>
+	  Published in <strong>NAACL</strong> 2018</li>
 
 <li>
 	SGM: Sequence Generation Model for Multi-label Classification. <br>
