--- a/index.html
+++ b/index.html
@@ -88,21 +88,29 @@ include deep learning applied to natural language processing.
 
 
 <ul>
-<li><a href = "https://arxiv.org/abs/1906.01231">Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model</a> <br>
+<li style="line-height: 20px; margin-bottom: 20px;"><a href = "https://arxiv.org/abs/1906.01231">Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model</a> <br>
 	Wei Li, Jingjing Xu, Yancheng He, Shengli Yan, Yunfang Wu, Xu sun<br>
 	ACL 2019<br> 
 	[<a href="bibtex.html">bibtex</a>]
 	<div id="ACL 2019"></div> </li>
-<li><a href = "http://www.aclweb.org/anthology/C/C16/C16-1185.pdf">Multi-level Gated Recurrent Neural Network for Dialog Act Classification</a> <br>
+<li style="line-height: 20px; margin-bottom: 20px;"><a href = "http://www.aclweb.org/anthology/C/C16/C16-1185.pdf">Multi-level Gated Recurrent Neural Network for Dialog Act Classification</a> <br>
 	Wei Li, Yunfang Wu<br>
 	COLING 2016<br> 
 	[<a href="bibtex.html">bibtex</a>]
 	<div id="COLING_2016"></div> </li>
 	
+<li style="line-height: 20px; margin-bottom: 20px;">Measuring and Relieving the Over-smoothing Problem for Graph Neural Networks from the Topological View<br>
+	Deli Chen, Yankai Lin, <strong>Wei Li</strong>, Peng Li, Jie Zhou, Xu Sun<br>
+	Accecpted in <strong>AAAI</strong> 2020</li>
+	
 <li style="line-height: 20px; margin-bottom: 20px;">Automatic Academic Paper Rating Based on Modularized Hierarchical Convolution Neural Network
 	    <br>
 	  Pengcheng Yang, Xu Sun, <strong>Wei Li</strong>, Shuming Ma<br>
 	  Published in <strong>ACL</strong> 2018</li>
+	
+<li style="line-height: 20px; margin-bottom: 20px;">Learning Universal Sentence Representations with Mean-Max Attention Autoencoder<br>
+	  Minghua Zhang, Weikang Li, <strong>Wei Li</strong>, Yunfang Wu<br>
+	  Published in <strong>EMNLP</strong> 2018</li>
 
 <li style="line-height: 20px; margin-bottom: 20px;">
 	  Query and Output: Generating Words by Querying Distributed Word Representations for Paraphrase Generation
@@ -110,18 +118,23 @@ include deep learning applied to natural language processing.
 	  Shuming Ma, Xu Sun,<strong> Wei Li</strong>, Sujian Li, Wenjie Li, Xuancheng Ren<br>
 	  Published in <strong>NAACL</strong> 2018</li>
 
-<li>
+<li style="line-height: 20px; margin-bottom: 20px;">
 	SGM: Sequence Generation Model for Multi-label Classification. <br>
 	Pengcheng Yang, Xu Sun, <b>Wei Li</b>, Shuming Ma, Wei Wu, Houfeng Wang.<br>
 	<b>COLING</b> 2018<br>
 
-<li>	
+<li style="line-height: 20px; margin-bottom: 20px;">
 	A Unified Model for Document-based Question Answering Based on Human-like Reading
 Strategy
 	<br>
 	Weikang Li, <b>Wei Li</b>, Yunfang Wu<br>
 	<b>AAAI</b> 2018<br>
-
+	
+<li style="line-height: 20px; margin-bottom: 20px;">
+	Training simplification and model simplification for deep learning: A minimal effort back propagation method
+	<br>
+	Xu Sun, Xuancheng Ren, Shuming Ma, Bingzhen Wei, <b>Wei Li</b>, Jingjing Xu, Yi Zhang<br>
+	<b>AAAI</b> 2018<br>
 
 </ul>
 
