--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@ include deep learning applied to natural language processing.
 <ul>
   <li style="line-height: 20px; margin-bottom: 10px;">Summer Intern at OMG, Tencent, July. 2016 - Aug. 2016.  Advisor: Bin Kang</li>
   <li style="line-height: 20px; margin-bottom: 10px;">Summer Intern at DaMo Academy, Alibaba, July. 2018 - Sept. 2018. Advisor: Hongxia Yang</li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Research Intern at PCG, Tencent, Oct. 2018 - Sep. 2019.  Advisor: Yancheng He</li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Research Intern at Mizuho, Oct. 2019 - Dec. 2019.  Advisor: Ruihan Bao</li>
 </ul>
 
 <h2>Publications</h2>
