--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Strategy
 	Training simplification and model simplification for deep learning: A minimal effort back propagation method
 	<br>
 	Xu Sun, Xuancheng Ren, Shuming Ma, Bingzhen Wei, <b>Wei Li</b>, Jingjing Xu, Yi Zhang<br>
-	<b>AAAI</b> 2018<br>
+	IEEE Transactions on Knowledge and Data Engineering<br>
 
 </ul>
 
