--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ size24 {
 <p>
 Wei Li is a Ph.D. student, supervised
 	by <a href="http://xusun.org">Prof. Xu Sun</a>. His recent research interests
-include deep learning applied to natural language processing. 
+include Graph Neural Networks applied to natural language processing. 
 </p>
 	
 <p style="font-size: 20px; margin-top: 30px;"><strong>Education:</strong></p>
