--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@ include Graph Neural Networks applied to natural language processing.
 
 <ul>
 <li style="line-height: 20px; margin-bottom: 20px;"><a href = "https://arxiv.org/abs/1906.01231">Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model</a> <br>
-	Wei Li, Jingjing Xu, Yancheng He, Shengli Yan, Yunfang Wu, Xu sun<br>
+	<strong>Wei Li</strong>, Jingjing Xu, Yancheng He, Shengli Yan, Yunfang Wu, Xu sun<br>
 	ACL 2019<br> 
 	[<a href="bibtex.html">bibtex</a>]
 	<div id="ACL 2019"></div> </li>
 <li style="line-height: 20px; margin-bottom: 20px;"><a href = "http://www.aclweb.org/anthology/C/C16/C16-1185.pdf">Multi-level Gated Recurrent Neural Network for Dialog Act Classification</a> <br>
-	Wei Li, Yunfang Wu<br>
+	<strong>Wei Li</strong>, Yunfang Wu<br>
 	COLING 2016<br> 
 	[<a href="bibtex.html">bibtex</a>]
 	<div id="COLING_2016"></div> </li>
