--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@ include Graph Neural Networks applied to natural language processing.
 <li style="line-height: 20px; margin-bottom: 20px;">Automatic Academic Paper Rating Based on Modularized Hierarchical Convolution Neural Network
 	    <br>
 	  Pengcheng Yang, Xu Sun, <strong>Wei Li</strong>, Shuming Ma<br>
-	  Published in <strong>ACL</strong> 2018</li>
+	  <strong>ACL</strong> 2018</li>
 	
 <li style="line-height: 20px; margin-bottom: 20px;">Learning Universal Sentence Representations with Mean-Max Attention Autoencoder<br>
 	  Minghua Zhang, Weikang Li, <strong>Wei Li</strong>, Yunfang Wu<br>
-	  Published in <strong>EMNLP</strong> 2018</li>
+	  <strong>EMNLP</strong> 2018</li>
 
 <li style="line-height: 20px; margin-bottom: 20px;">
 	  Query and Output: Generating Words by Querying Distributed Word Representations for Paraphrase Generation
 	    <br>
 	  Shuming Ma, Xu Sun,<strong> Wei Li</strong>, Sujian Li, Wenjie Li, Xuancheng Ren<br>
-	  Published in <strong>NAACL</strong> 2018</li>
+	  <strong>NAACL</strong> 2018</li>
 
 <li style="line-height: 20px; margin-bottom: 20px;">
 	SGM: Sequence Generation Model for Multi-label Classification. <br>
