--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ include Graph Neural Networks applied to natural language processing.
 
 <p style="font-size: 20px; margin-top: 30px;"><strong>Internship:</strong></p>
 <ul>
-  <li style="line-height: 20px; margin-bottom: 10px;">Summer Intern at DaMo Academy, Alibaba, July. 2018 - Sept. 2018. Advisor: Hongxia Yang</li>
-  <li style="line-height: 20px; margin-bottom: 10px;">Research Intern at PCG, Tencent, July. 2019 - Sep. 2019.  Advisor: Yancheng He</li>
-  <li style="line-height: 20px; margin-bottom: 10px;">Research Intern at Mizuho, Oct. 2019 - Dec. 2019.  Advisor: Ruihan Bao</li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Summer Intern at DaMo Academy, Alibaba, July. 2018 - Sept. 2018. </li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Research Intern at PCG, Tencent, July. 2019 - Sep. 2019.  </li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Research Intern at Mizuho, Oct. 2019 - Dec. 2019. </li>
 </ul>
 
 <h2>Publications</h2>
