--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ include Graph Neural Networks applied to natural language processing.
 	
 <p style="font-size: 20px; margin-top: 30px;"><strong>Education:</strong></p>
 <ul>
-  <li style="line-height: 20px; margin-bottom: 10px;">Master-degree student in Computer Science, Peking Universiy, Sept. 2015 - Now.  Advisor: Yunfang Wu</li>
+  <li style="line-height: 20px; margin-bottom: 10px;">Master-degree student in Computer Science, Peking Universiy, Sept. 2015 - July. 2018.  Advisor: Yunfang Wu</li>
   <li style="line-height: 20px; margin-bottom: 10px;">Bachelor of Computer Science, Peking University, Sept. 2011 - Jul. 2015.</li>
 </ul>
 
@@ -89,6 +89,10 @@ include Graph Neural Networks applied to natural language processing.
 
 
 <ul>
+<li style="line-height: 20px; margin-bottom: 20px;">Modeling the Stock Relation with Graph Network for Overnight Stock Movement Prediction<br>
+	<strong>Wei Li</strong>, Ruihan Bao, Keiko Harimoto, Deli Chen, Jingjing Xu, Qi Su<br>
+	<strong> IJCAI</strong> 2020<br>
+	<div id="ACL 2019"></div> </li>
 <li style="line-height: 20px; margin-bottom: 20px;"><a href = "https://arxiv.org/abs/1906.01231">Coherent Comment Generation for Chinese Articles with a Graph-to-Sequence Model</a> <br>
 	<strong>Wei Li</strong>, Jingjing Xu, Yancheng He, Shengli Yan, Yunfang Wu, Xu sun<br>
 	<strong>ACL</strong> 2019<br> 
