--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ size24 {
 Wei Li is a Ph.D. student, supervised
 	by <a href="http://xusun.org">Prof. Xu Sun</a>. His recent research interests
 include Graph Neural Networks applied to natural language processing. 
+	his google scholar id is xb6uE9IAAAAJ; semantic scholar id is 39848715; dblp id is 64/6025-101
+	
 </p>
 	
 <p style="font-size: 20px; margin-top: 30px;"><strong>Education:</strong></p>
