--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ size24 {
 Wei Li is a Ph.D. student, supervised
 	by <a href="http://xusun.org">Prof. Xu Sun</a>. His recent research interests
 include Graph Neural Networks applied to natural language processing. 
-	his google scholar id is xb6uE9IAAAAJ; semantic scholar id is 39848715; dblp id is 64/6025-101
+	his google scholar id is xb6uE9IAAAAJ; semantic scholar id is 39848715; dblp id is 64/6025-101; ORCID id is 0000-0002-2781-5977;
 	
 </p>
 	
